fix project list spacing, heading sizes

--- a/app/assets/styles/core/_browse.scss
+++ b/app/assets/styles/core/_browse.scss
@@ -47,4 +47,13 @@
   }
 }
 
+.section__header {
+  float: left;
+  @include col(12/12);
+}
+
+.section__content {
+  float: left;
+  @include col(12/12);
+}
 
